2024-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Adapt to changes in svconnector, resolves #16
    * Verify compatibility with TYPO3 13 ELTS, resolves #15

2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 13, resolves #15
    * Clean up code with Rector, drop compatibility with PHP 7.4 and 8.0, references #15

2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Verify compatibility with PHP 8.2
	* Release version 4.1.0

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update example code for service instanciation
	* Verify compatibility with TYPO3 12 LTS
	* Relase version 4.0.1

2022-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 4.0.0

2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Adapt to changes in Doctrine/DBAL, resolves #14
	* Ensure compatibility with TYPO3 12, resolves #12
	* Ensure compatibility with PHP 8.1

2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Switch to new connector service registration API, resolves #13

2022-12-15 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add driver class option to connector parameters (thanks to Christian Toffolo)
	* Relase version 3.1.0

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 2.3.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 2.3.0

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update documentation settings, resolves #7

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10
