@@ -1,16 +1,0 @@
-[general]
-copyright = 2009-2023
-project = SQL Connector Service
-release = 4.1.0
-
-[html_theme_options]
-github_branch = master
-github_repository = cobwebch/svconnector_sql
-project_contact =
-project_discussions =
-project_home = https://github.com/cobwebch/svconnector_sql/
-project_issues = https://github.com/cobwebch/svconnector_sql/issues/
-project_repository = https://github.com/cobwebch/svconnector_sql/
-
-[intersphinx_mapping]
-svconnector = http://docs.typo3.org/typo3cms/extensions/svconnector/
