@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<guides xmlns="https://www.phpdoc.org/guides" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="https://www.phpdoc.org/guides ../vendor/phpdocumentor/guides-cli/resources/schema/guides.xsd"
+        links-are-relative="true">
+    <extension class="\T3Docs\Typo3DocsTheme\DependencyInjection\Typo3DocsThemeExtension"
+               project-home="https://github.com/cobwebch/svconnector_sql"
+               project-repository="https://github.com/cobwebch/svconnector_sql"
+               project-issues="https://github.com/cobwebch/svconnector_sql/issues" edit-on-github-branch="master"
+               edit-on-github="cobwebch/svconnector_sql"
+               typo3-core-preferred="stable"
+               interlink-shortcode="cobweb/svconnector_sql"
+    />
+    <project
+            title="CSV Connector Service"
+            release="4.1.0"
+            copyright="2009-2024"
+    />
+    <inventory id="svconnector" url="https://docs.typo3.org/p/cobweb/svconnector/main/en-us/"/>
+</guides>
