@@ -1,3 +1,7 @@
+2024-12-02 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Clean up and improve documentation
+
 2024-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Adapt to changes in svconnector, resolves #16
